--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -11,6 +11,9 @@ jobs:
       id-token: write
       contents: read
     steps:
+    
+    - name: Checkout
+      uses: actions/checkout@v3
 
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v2
@@ -25,7 +28,7 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    -  name: Build and push
+    - name: Build and push
       uses: docker/build-push-action@v3
       with:
         registry: gchr.io
