--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -19,19 +19,14 @@ jobs:
       uses: docker/setup-qemu-action@v2
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v2        
 
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
+    - name: Build and push
+      uses: docker/build-push-action@v1
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Build and push
-      uses: docker/build-push-action@v3
-      with:
+        password: ${{ secrets.PAT}}
         context: .
-        registry: gchr.io
-        push: true
-        tags: rclone-docker:latest
+        repository: click-dealer-themes/rclone-docker
+        tags: latest
