--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -19,14 +19,18 @@ jobs:
       uses: docker/setup-qemu-action@v2
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2        
+      uses: docker/setup-buildx-action@v2
 
-    - name: Build and push
-      uses: docker/build-push-action@v1
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v2
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ secrets.PAT}}
+        password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
         context: .
-        repository: click-dealer-themes/rclone-docker
-        tags: latest
+        push: true
+        tags: click-dealer-themes/rclone-docker:latest
