--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -31,6 +31,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
+        registry: ghcr.io
         context: .
         push: true
         tags: click-dealer-themes/rclone-docker:latest
