--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -31,7 +31,6 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        registry: ghcr.io
         context: .
         push: true
-        tags: click-dealer-themes/rclone-docker:latest
+        tags: ghcr.io/click-dealer-themes/rclone-docker:latest
