--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -10,7 +10,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
-      package: write
+      packages: write
     steps:
 
     - name: Checkout
