--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -4,6 +4,13 @@ on:
   push:
     branches: main
 
+    inputs:
+      image_repository:
+        description: The ECR image repository name
+        required: false
+        type: string
+        default: rclone-conf
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -45,12 +52,19 @@ jobs:
       id: docker_meta
       uses: crazy-max/ghaction-docker-meta@v1
       with:
-        images: ${{ steps.login-ecr.outputs.registry }}/rclone-docker:latest
+        images: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.image_repository }}
+        tag-edge: true
+        tag-sha: true
 
     - name: Build and push
       id: docker_build
       uses: docker/build-push-action@v2
+      env:
+        NODE_OPTIONS: --max-old-space-size=8192 # was required for click-consumer-app
       with:
         push: true
         context: .
-        tags: clickdealer-themes/rclone-docker:latest
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
+        tags: ${{ steps.docker_meta.outputs.tags }}
+        labels: ${{ steps.docker_meta.outputs.labels }}
