--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -53,18 +53,14 @@ jobs:
       uses: crazy-max/ghaction-docker-meta@v1
       with:
         images: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.image_repository }}
-        tag-edge: true
-        tag-sha: true
+        tags: latest
 
     - name: Build and push
       id: docker_build
       uses: docker/build-push-action@v2
-      env:
-        NODE_OPTIONS: --max-old-space-size=8192 # was required for click-consumer-app
       with:
         push: true
         context: .
         cache-from: type=gha
         cache-to: type=gha,mode=max
         tags: ${{ steps.docker_meta.outputs.tags }}
-        labels: ${{ steps.docker_meta.outputs.labels }}
