--- a/.github/workflows/image-build.yaml
+++ b/.github/workflows/image-build.yaml
@@ -9,7 +9,7 @@ on:
         description: The ECR image repository name
         required: false
         type: string
-        default: rclone-conf
+        default: clickdealer-themes/rclone-conf
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -58,6 +58,7 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
+        repository: ${{ steps.login-ecr.outputs.registry }}/${{ inputs.image_repository }}
         push: true
         context: .
-        tags: 353817990488.dkr.ecr.eu-west-2.amazonaws.com/clickdealer-themes/rclone-conf:latest
+        tags: latest
